# pynterpol

./: .gitignore  LICENSE  README.md  setup.cfg
src/: pynterpol.py
src/pynterpol/: pynterpol.py
tests/: test_pynterpol.py
