[metadata]
name = pynterpol
version = 1.1.0
author = Florent Brunet
author_email = florent.brunet@algostia.com
description = Fast image interpolation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FlorentBrunet/pynterpol
project_urls =
    Bug Tracker = https://github.com/FlorentBrunet/pynterpol/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Image Processing

[options]
package_dir =
    =src
py_modules = pynterpol
python_requires = >=3.6
install_requires =
    numba
    numpy
